@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
title FastMarket - Diagrama de clases y patrones
class Usuario
class Producto
class Pedido
class PedidoItem
class Carrito
class Cupon
class PedidoBuilder <<Builder>>
class PedidoStateFactory <<Factory>>
interface EstadoPedidoState <<State>>
class PendienteState
class ConfirmadoState
class PreparandoState
class CaminoState
class EntregadoState
class CanceladoState
interface PasarelaPago
class MercadoPagoAdapter <<Adapter>>
class ComercioElectronicoFacade <<Facade>>
class ReporteSeguroProxy <<Proxy>>
interface PedidoObserver <<Observer>>
class PedidoEventPublisher <<Subject>>
class PedidoHistorialObserver
class PedidoNotificacionObserver
class PedidoService
class MercadoPagoService
class ReporteService
Usuario "1" -- "*" Pedido
Pedido "1" *-- "*" PedidoItem
PedidoItem "*" --> "1" Producto
Usuario "1" -- "1" Carrito
PedidoBuilder --> Pedido : construye
PedidoService ..> PedidoBuilder
PedidoService ..> PedidoStateFactory
PedidoStateFactory --> EstadoPedidoState
PendienteState ..|> EstadoPedidoState
ConfirmadoState ..|> EstadoPedidoState
PreparandoState ..|> EstadoPedidoState
CaminoState ..|> EstadoPedidoState
EntregadoState ..|> EstadoPedidoState
CanceladoState ..|> EstadoPedidoState
MercadoPagoAdapter ..|> PasarelaPago
MercadoPagoService --> PasarelaPago
ComercioElectronicoFacade --> PedidoService
ComercioElectronicoFacade --> MercadoPagoService
ReporteSeguroProxy --> ReporteService
PedidoService --> PedidoEventPublisher
PedidoEventPublisher --> PedidoObserver
PedidoHistorialObserver ..|> PedidoObserver
PedidoNotificacionObserver ..|> PedidoObserver
@enduml
